/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;


message Search {

  // The ID of your start station/place
  string originID = 305301187;

  // The ID of your target station/place
  string destinationID = 306545065;

  // Datetime where you want to search for
  string time = 3560141;

  // Shows if your time is for departure or arrival of your trip.
  bool isArrivalTime = 287005991;

}
