/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;


message TimetableSearch {

  // The ID of your station/place you want the timetable from
  string stationID = 470774452;

  // Datetime where you want to search for
  string lookupTime = 226370409;

  // Shows if your time is for departure or arrival of your first timetable object.
  bool isArrivalTime = 287005991;

}
