/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import "google/protobuf/empty.proto";
import public "models/error.proto";
import public "models/place_result.proto";

service PlaceService {
  rpc PlaceNearbySourceGet (PlaceNearbySourceGetRequest) returns (PlaceResult);

  rpc PlaceSearchSourceGet (PlaceSearchSourceGetRequest) returns (PlaceResult);

}

message PlaceNearbySourceGetRequest {
  // Data source to be selected on.
  string source = 1;
  double latitude = 2;
  double longitude = 3;

}

message PlaceSearchSourceGetRequest {
  // Data source to be selected on.
  string source = 1;
  string query = 2;

}

